@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+       - add Helper::ResultSet::SearchOr component to avoid Union when possible
        - Simplify implementation of CorrelatedRelationship to work with more
          versions of DBIx::Class
 
